tests/fixtures/invalid/pow_bytes_bool_list.py
# Cannot call pow() with Bytes, Bool, List[int]
x = pow(b"hello", True, [1, 2, 3])
